# growi_revision_parser

./: .gitignore  README.md  pyproject.toml
data/: revisions-sample.json
data/out-sample/: _user_Altair626_monthly.md
growi_salvage/: main.py
growi_salvage/utils/: dataclass.py  dump.py  loader.py  modifier.py
tests/: test_loader.py  test_modifier.py
