[tool.poetry]
name = "growi-salvage"
version = "0.1.0"
description = ""
authors = ["Vegctrp <kem.altair@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
pytest = "^8.3.3"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
mypy_path = "stubs/"

[tool.ruff]
line-length = 90
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = ["ALL"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests",]
python_functions = "test_*"